--- a/DotNetNlayer/DotNetNlayer.API/DotNetNlayer.API.csproj
+++ b/DotNetNlayer/DotNetNlayer.API/DotNetNlayer.API.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\DotnetNlayer.Service\DotnetNlayer.Service.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Middleware\" />
+    </ItemGroup>
+
 </Project>
