--- a/DotNetNlayer/DotNetNlayer.API/DotNetNlayer.API.csproj
+++ b/DotNetNlayer/DotNetNlayer.API/DotNetNlayer.API.csproj
@@ -17,7 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Middleware\" />
+      <Folder Include="Controllers\" />
     </ItemGroup>
 
 </Project>
