Role based authentication and token services added. Test to be done

--- a/DotNetNlayer/DotnetNlayer.Service/DotnetNlayer.Service.csproj
+++ b/DotNetNlayer/DotnetNlayer.Service/DotnetNlayer.Service.csproj
@@ -10,4 +10,14 @@
       <ProjectReference Include="..\DotnetNlayer.Repository\DotnetNlayer.Repository.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
+        <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\9.0.0\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
 </Project>
