--- a/DotNetNlayer/DotNetNlayer.Core/DotNetNlayer.Core.csproj
+++ b/DotNetNlayer/DotNetNlayer.Core/DotNetNlayer.Core.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\SharedLibrary\SharedLibrary.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.0" />
+    </ItemGroup>
+
 </Project>
