--- a/DotNetNlayer/DotNetNlayer.API/DotNetNlayer.API.csproj
+++ b/DotNetNlayer/DotNetNlayer.API/DotNetNlayer.API.csproj
@@ -9,15 +9,15 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Scalar.AspNetCore" Version="1.2.42" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\DotnetNlayer.Service\DotnetNlayer.Service.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Controllers\" />
     </ItemGroup>
 
 </Project>
