--- a/DotNetNlayer/DotNetNlayer.API/appsettings.json
+++ b/DotNetNlayer/DotNetNlayer.API/appsettings.json
@@ -1,8 +1,36 @@
 {
+  "Clients":
+  [
+    {
+      "Id": "authserver",
+      "Secret": "authserverSecretKey"
+    },
+    {
+      "Id": "jsclient",
+      "Secret": "jsclientSecretKey"
+    },  {
+    "Id": "MVC",
+    "Secret": "MVClientSecretKey"
+  }
+  ],
+  "TokenOptions": {
+    "Audience": ["www.test.com"],
+    "Issuer": "www.authserver.test.com",
+    "AccessTokenExpiration": 9000,
+    "RefreshTokenExpiration": 999999,
+    "SecurityKey": "My@Super!Secret?Security/Key**@12!3+569My@Super!Secret?Security/Key**@12!3+569My@Super!Secret?Security/Key**@12!3+569"
+  },
+
+  "ConnectionStrings": {
+    "SqlCon": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NLayerFrameworkDB;Integrated Security=True;Encrypt=False;"
+
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
