--- a/DotNetNlayer/DotNetNlayer.API/appsettings.json
+++ b/DotNetNlayer/DotNetNlayer.API/appsettings.json
@@ -22,7 +22,8 @@
   },
 
   "ConnectionStrings": {
-    "SqlCon": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NLayerFrameworkDB;Integrated Security=True;Encrypt=False;"
+    "SqlCon": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NLayerFrameworkDB;Integrated Security=True;Encrypt=False;",
+    "HangfireCon": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NLayerFrameworkDBHangFire;Integrated Security=True;Encrypt=False;"
 
   },
   "Logging": {
@@ -30,8 +31,12 @@
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Hangfire": "Information"
+
     }
   },
   "AllowedHosts": "*"
+  
+  
 }
