UserEmailConfirmation moved to EmailConfirmationService.cs, DummyEmailConfirmationService.cs added, If you don't want to use the emailconfirmation service you can use mockservice, it will not send any email but directly confirms email if user exists

--- a/DotNetNlayer/DotNetNlayer.API/appsettings.json
+++ b/DotNetNlayer/DotNetNlayer.API/appsettings.json
@@ -13,6 +13,7 @@
     "Secret": "MVClientSecretKey"
   }
   ],
+  "ConfirmEmail": false,
   "TokenOptions": {
     "Audience": ["www.test.com"],
     "Issuer": "www.authserver.test.com",
